# QuerySFZD

./: .stylish-haskell.yaml  CHANGELOG.md  QuerySFZD.cabal  README.md
src/: Main.hs
src/QuerySFZD/: Cache.hs  Client.hs  Preferences.hs  Server.hs  Util.hs
src/QuerySFZD/API/: Ours.hs
src/QuerySFZD/API/Ours/: IndexPage.hs  Query.hs  Results.hs  Template.hs
src/QuerySFZD/API/Theirs/: CiDianWang.hs  Common.hs  ShuFaZiDian.hs
src/QuerySFZD/API/Theirs/CiDianWang/: Results.hs
src/QuerySFZD/API/Theirs/ShuFaZiDian/: Results.hs
src/QuerySFZD/Cache/: Preferences.hs  Queries.hs
src/QuerySFZD/Client/: CiDianWang.hs  Common.hs  ShuFaZiDian.hs
src/QuerySFZD/Data/: Calligraphers.hs
src/QuerySFZD/HTML/: Index.hs  Results.hs  Template.hs
static/: handlers.js  style.css
