cabal-version:       >=1.10

name:                QuerySFZD
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@edsko.net
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable QuerySFZD
  main-is:             Main.hs
  other-modules:       QuerySFZD.API.Ours
                       QuerySFZD.API.Ours.IndexPage
                       QuerySFZD.API.Ours.Results
                       QuerySFZD.API.Ours.Template
                       QuerySFZD.API.Theirs.CiDianWang
                       QuerySFZD.API.Theirs.CiDianWang.Results
                       QuerySFZD.API.Theirs.Common
                       QuerySFZD.Client.CiDianWang
                       QuerySFZD.Server
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , http-api-data
                     , http-client
                     , servant
                     , servant-blaze
                     , servant-client
                     , servant-server
                     , utf8-string
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
