cabal-version:       >=1.10

name:                QuerySFZD
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@edsko.net
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable QuerySFZD
  main-is:             Main.hs
  other-modules:       QuerySFZD.API.Ours
                       QuerySFZD.API.Ours.IndexPage
                       QuerySFZD.API.Ours.Query
                       QuerySFZD.API.Ours.Results
                       QuerySFZD.API.Ours.Template
                       QuerySFZD.API.Theirs.CiDianWang
                       QuerySFZD.API.Theirs.CiDianWang.Results
                       QuerySFZD.API.Theirs.ShuFaZiDian
                       QuerySFZD.API.Theirs.ShuFaZiDian.Results
                       QuerySFZD.Cache
                       QuerySFZD.Cache.Preferences
                       QuerySFZD.Cache.Queries
                       QuerySFZD.Client
                       QuerySFZD.Client.CiDianWang
                       QuerySFZD.Client.ShuFaZiDian
                       QuerySFZD.Data.Calligraphers
                       QuerySFZD.Server
                       QuerySFZD.Util
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , containers
                     , directory
                     , filepath
                     , http-api-data
                     , http-client
                     , mtl
                     , random
                     , serialise
                     , servant
                     , servant-blaze >=0.9
                     , servant-client
                     -- TODO: remove:
                     , servant-client-core
                     , servant-server
                     , tagsoup
                     , text
                     , unordered-containers
                     , utf8-string
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
